--- a/css/style.css
+++ b/css/style.css
@@ -732,13 +732,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   transition: 0.3s;
 }
 
-#about .about-col:hover .icon {
-  background-color: #fff;
-}
-
-#about .about-col:hover i {
-  color: #10d213;
-}
 
 #about .about-col h2 {
   color: #000;
@@ -1117,6 +1110,11 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin: 0 2px;
 }
 
+#team .member img {
+    -webkit-filter: grayscale(100%) contrast(120%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%) contrast(120%);
+
+}
 /* Contact Section
 --------------------------------*/
 #contact {
@@ -1384,4 +1382,3 @@ body.mobile-nav-active #mobile-nav-toggle {
 #footer-logo{
   max-width: 100%;
 }
-
