Ajout de la photo du trésorier + correction de typos

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@
   font-style: normal;
 }
 
+/* html{
+  -webkit-text-size-adjust:none;
+  -ms-text-size-adjust:none;
+  -moz-text-size-adjust:none;
+  text-size-adjust:none;
+} */
 
 body {
   background: #fff;
