--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,13 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+.top-message{
+  text-align: center;
+  margin-bottom: 50px;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
 #header {
   padding: 30px 0;
   height: 92px;
