Amélioration de l'interface mobile

--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,6 @@
   font-style: normal;
 }
 
-/* html{
-  -webkit-text-size-adjust:none;
-  -ms-text-size-adjust:none;
-  -moz-text-size-adjust:none;
-  text-size-adjust:none;
-} */
-
 body {
   background: #fff;
   color: #666666;
@@ -78,24 +71,21 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-.green{
-  color:#10d22d;
+@media (max-width: 350px) {
+  .section-header h3 {
+    font-size: 26px !important;
+  }
 }
 
-.black{
-  color: black;
-}
-
-.blue{
-  color: blue;
-}
-
-.turquoise {
-  color: #17b4b0;
+.x-small{
+  font-size: 9px;
 }
 
 .code{
   font-family: consolas, Inconsolata, monospace;
+  background: white;
+  padding: 6px;
+  border-radius: 5px;
 }
 
 .compact {
@@ -106,6 +96,12 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 45px;
   margin-bottom: 20px;
 }
+
+
+/*--------------------------------------
+# Colors
+---------------------------------------*/
+
 
 .discord-color{
   color: #7289DA;
@@ -124,14 +120,32 @@ h1, h2, h3, h4, h5, h6 {
   background: #6077da;
 }
 
+.green{
+  color:#10d22d;
+}
+
+
+.black{
+  color: black;
+}
+
+.blue{
+  color: blue;
+}
+
+.turquoise {
+  color: #17b4b0;
+}
+
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
 .top-message{
   text-align: center;
-  margin-bottom: 50px;
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-bottom: 60px;
+  margin-left: 22%;
+  margin-right: 22%;
 }
 
 #header {
@@ -651,7 +665,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   line-height: 24px;
   color: #fff;
   margin-bottom: 0;
-  padding: 0 20px 20px 0;
+  /*padding: 0 20px 20px 0;*/
 }
 
 #featured-services i {
@@ -698,6 +712,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 @media (max-width: 992px) {
   #featured-services .box-bg {
     border-top: 1px solid white;
+  }
+  #featured-services .box {
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 0;
   }
 }
 
@@ -1205,10 +1224,27 @@ body.mobile-nav-active #mobile-nav-toggle {
   border-right: solid 1px lightgray;
 }
 
-
 #contact .form {
   margin-top: 55px;
 }
+
+@media (max-width: 768px) {
+
+  #contact .center {
+    border-top: solid 1px lightgray;
+    border-bottom: solid 1px lightgray;
+    border-left: none;
+    border-right: none;
+    padding: 25px 0;
+    margin: 25px 20px;
+  }
+
+  #contact .form{
+    margin-top: 30px;
+  }
+}
+
+
 
 #contact .form #sendmessage {
   color: #10d213;
