--- a/admin/view/frmAddArticle.html
+++ b/admin/view/frmAddArticle.html
@@ -67,7 +67,7 @@
                                                     <td >
                                                         <div class="custom-file">
                                                             <label class="custom-file-label" for="customFile">IMG</label>
-                                                            <input type="file" class="custom-file-input" style="width:2rem;" id="customFile">
+                                                            <input type="file" class="custom-file-input" style="width:2rem;" id="file" name="file">
                                                         </div>
                                                     </td>
                                                     <td >
@@ -90,7 +90,7 @@
                                             </tr>
                                             <?php } ?>
                                             <tr>
-                                                <form method="post" action="../controller/frmInsertArticle.php">
+                                                <form method="post" action="../controller/ArticleInsert.php">
                                                     <td>
                                                         <div class="custom-file">
                                                             <label class="custom-file-label" for="customFile">IMG</label>
