Mise a jour fonctionnement Epicerie
-Retrait des quantités paquet, prix paquet, lien vers l'image dans la bd et transformée.
-Reecriture du contrôler d'insertion d'article.
-Correction de la fonction d’effaçage des membres de confiance.

--- a/admin/view/frmAddArticle.html
+++ b/admin/view/frmAddArticle.html
@@ -2,127 +2,135 @@
 <html lang="en">
 
 <head>
-    <title>ADEPT - Administration</title>
-    <?php include "../includes/dash_meta_links.php"?>
+    <title>ADEPT ADMIN - Utilisateurs</title>
+    <?php include("../includes/dash_meta_links.php");?>
 
 </head>
 
 <body>
-    <?php include("../includes/dash_header.php") ?>
+    <?php include("../includes/dash_header.php"); ?>
     <!-- MAIN CONTENT-->
     <div class="main-content">
-        <main id="module">
+        <section id="AjoutArticle" class="section-bg wow fadeInUp">
 
-            <section id="boufe" class="section-bg wow fadeInUp">
                 <div class="container">
                     <div class="section-header text-center">
                         <h3>Formulaire de rajout d'un article.</h3>
                     </div>
+                    
+                    <hr>
+                    
                     <?php if($msg != ''){
                         echo "<div class='alert alert-success'>".$msg."</div>";
                     } ?>
-                    <div class="row">
-                        <div class="col-md" style="margin-bottom:10px">
-                            <div class="card">
-                                <div class="card-body">
-                                    <table class="table table-striped">
-                                        <thead>
-                                            <tr>
-                                                <th scope="col">Image</th>
-                                                <th scope="col">Article</th>
-                                                <th scope="col">Prix</th>
-                                                <th scope="col">Inventaire</th>
-                                                <th scope="col">Description</th>
-                                                <th scope="col">Options</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <?php
-                                                $tabAllArticles = getAllArticles();
-                                                foreach ($tabAllArticles as $Article)
-                                            { ?>
-                                            <tr class="clickable" data-toggle="collapse" id="row<?php echo $Article['articleID'];?>" data-target=".row<?php echo $Article['articleID'];?>">
-                                                <td >
-                                                    <img height="100" width="100" src="<?php echo "../../img/epicerie/".$Article['articleID'].".jpg"; ?>" />
-                                                </td>
-                                                <td >
-                                                    <?php echo $Article['nom']; ?>
-                                                </td>
-                                                <td>
-                                                    <?php echo $Article['cout']; ?>
-                                                </td>
-                                                <td>
-                                                    <?php echo $Article['qtyCourant']; ?>
-                                                </td>
-                                                <td >
-                                                    <?php echo $Article['info']; ?>
-                                                </td>
-                                                <td >
-                                                    <a href="<?php echo "../controller/ArticleDelete.php?id=".$Article['articleID'];?>" 
-                                                        class="btn btn-primary">Retirer</a>
-                                                </td>
-                                            </tr>
-                                            <tr class="collapse row<?php echo $Article['articleID'];?>">
-                                                <form method="post" action="../controller/ArticleEdit.php">
-                                                    <td >
-                                                        <div class="custom-file">
-                                                            <label class="custom-file-label" for="customFile">IMG</label>
-                                                            <input type="file" class="custom-file-input" style="width:2rem;" id="file" name="file">
-                                                        </div>
-                                                    </td>
-                                                    <td >
-                                                        <input type="hidden" value="<?php echo $Article['articleID']?>" name="id" class="form-control" id="id" />
-                                                        <input type="text" value="<?php echo $Article['nom']?>" name="nom" class="form-control" id="nom" />
-                                                    </td>
-                                                    <td>
-                                                    <input type="number" value="<?php echo $Article['cout']?>" name="cout" class="form-control" id="cout" step=".01"/>
-                                                    </td>
-                                                    <td>
-                                                    <input type="number" value="<?php echo $Article['qtyCourant']?>" name="qty" class="form-control" id="qty"  />
-                                                    </td>
-                                                    <td >
-                                                    <input type="text" value="<?php echo $Article['info']?>" name="desc" class="form-control" id="desc"  />
-                                                    </td>
-                                                    <td >
-                                                        <input class="btn btn-primary" type="submit" name="submit" value="Modifier"/><br><br>
-                                                    </td>
-                                                </form>
-                                            </tr>
-                                            <?php } ?>
-                                            <tr>
-                                                <form method="post" action="../controller/ArticleInsert.php">
-                                                    <td>
-                                                        <div class="custom-file">
-                                                            <label class="custom-file-label" for="customFile">IMG</label>
-                                                            <input type="file" class="custom-file-input" style="width:2rem;" id="customFile">
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <input type="text"  name="nom" class="form-control" id="nom" />
-                                                    </td>
-                                                    <td>
-                                                    <input type="number"  name="cout" class="form-control" id="cout" step=".01"/>
-                                                    </td>
-                                                    <td>
-                                                    <input type="number"name="qty" class="form-control" id="qty"  />
-                                                    </td>
-                                                    <td >
-                                                    <input type="text"  name="desc" class="form-control" id="desc"  />
-                                                    </td>
-                                                    <td >
-                                                        <input class="btn btn-primary" type="submit" name="submit" value="Ajouter"/>
-                                                    </td>
-                                                </form>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
+                    <section id="boufe">
+
+                        <table class="table table-bordered table-striped ">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">Image</th>
+                                    <th scope="col">Article</th>
+                                    <th scope="col">Prix</th>
+                                    <th scope="col">Inventaire</th>
+                                    <th scope="col">Description</th>
+                                    <th scope="col">Options</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <?php
+                                    $tabAllArticles = getAllArticles();
+                                    foreach ($tabAllArticles as $Article)
+                                { ?>
+                                <tr class="clickable" data-toggle="collapse" id="row<?php echo $Article['articleID'];?>"
+                                    data-target=".row<?php echo $Article['articleID'];?>">
+                                    <td>
+                                        <img height="100" width="100" src="<?php echo " ../../img/epicerie/".$Article['articleID'].".jpg";
+                                            ?>" />
+                                    </td>
+                                    <td>
+                                        <?php echo $Article['nom']; ?>
+                                    </td>
+                                    <td>
+                                        <?php echo $Article['cout']; ?>
+                                    </td>
+                                    <td>
+                                        <?php echo $Article['qty']; ?>
+                                    </td>
+                                    <td>
+                                        <?php echo $Article['info']; ?>
+                                    </td>
+                                    <td>
+                                        <a href="<?php echo " ../controller/ArticleDelete.php?id=".$Article['articleID'];?>"
+                                            class="btn btn-primary">Retirer</a>
+                                    </td>
+                                </tr>
+                                <tr class="collapse row<?php echo $Article['articleID'];?>">
+                                    <form method="post" action="../controller/ArticleEdit.php">
+                                        <td>
+                                            <div class="custom-file">
+                                                <label class="custom-file-label" for="customFile">IMG</label>
+                                                <input type="file" class="custom-file-input" style="width:2rem;" id="file"
+                                                    name="file">
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <input type="hidden" value="<?php echo $Article['articleID']?>" name="articleID"
+                                                class="form-control" id="articleID" />
+                                            <input type="text" value="<?php echo $Article['nom']?>" name="nom" class="form-control"
+                                                id="nom" />
+                                        </td>
+                                        <td>
+                                            <input type="number" value="<?php echo $Article['cout']?>" name="cout"
+                                                class="form-control" id="cout" step=".01" />
+                                        </td>
+                                        <td>
+                                            <input type="number" value="<?php echo $Article['qty']?>" name="qty"
+                                                class="form-control" id="qty" />
+                                        </td>
+                                        <td>
+                                            <input type="text" value="<?php echo $Article['info']?>" name="desc" class="form-control"
+                                                id="desc" />
+                                        </td>
+                                        <td>
+                                            <input class="btn btn-primary" type="submit" name="submit" value="Modifier" /><br><br>
+                                        </td>
+                                    </form>
+                                </tr>
+                                <?php 
+                                    } 
+                                ?>
+                                <tr>
+                                    <form method="post" enctype="multipart/form-data" action="../controller/ArticleInsert.php">
+                                        <td>
+                                            <div class="custom-file">
+                                                <label class="custom-file-label" for="img">IMG</label>
+                                                <input type="file" class="custom-file-input" style="width:2rem;" name="img" id="img" required>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <input type="text" name="nom" class="form-control" id="nom" required/>
+                                        </td>
+                                        <td>
+                                            <input type="number" name="cout" class="form-control" id="cout" step=".01" required/>
+                                        </td>
+                                        <td>
+                                            <input type="number" name="qty" class="form-control" id="qty" required/>
+                                        </td>
+                                        <td>
+                                            <input type="text" name="desc" class="form-control" id="desc" required/>
+                                        </td>
+                                        <td>
+                                            <input class="btn btn-primary" type="submit" name="submit" value="Ajouter" />
+                                        </td>
+                                    </form>
+                                </tr>
+                            </tbody>
+                        </table>
+                </section>
+            </div>
+            <!-- END MAIN CONTENT-->
+            <!-- END PAGE CONTAINER-->
+    </div>
     </div>
 
     <?php include "../includes/dash_scripts.php"?>
