--- a/admin/view/frmAddArticle.html
+++ b/admin/view/frmAddArticle.html
@@ -68,7 +68,7 @@
                                     <form method="post" action="../controller/ArticleEdit.php">
                                         <td>
                                             <div class="custom-file">
-                                                <input type="file" class="custom-file-input" style="width:2rem;" id="file" name="file">
+                                                <input type="file" class="custom-file-input" style="width:2rem;" id="img" name="img">
                                             </div>
                                         </td>
                                         <td>
