Added color to admin hoodie page

--- a/admin/view/HoodieDetails.html
+++ b/admin/view/HoodieDetails.html
@@ -59,6 +59,7 @@
                     <div><span class="strong">Email : </span><?php echo $reservation['Email']?></div>
                     <div><span class="strong">Numéro d'étudiant : </span><?php echo $reservation['NumEtudiant']?></div>
                     <div><span class="strong">Numéro de réservation:  </span><?php echo $reservation['NumeroReservation']?></div>
+                    <div><span class="strong">Couleur : </span> <?php echo $reservation['Color']?></div>
                     <br>
                     <div><span class="strong">Paiement restant:  </span></div>
                     <div class="super">
