Ajout de l'affichage des couleurs dans le dashboard des hoodies

--- a/admin/styles/HoodieStyle.css
+++ b/admin/styles/HoodieStyle.css
@@ -49,6 +49,21 @@ td, th{
     background-color : gold;
 }
 
+.black{
+    color:white;
+    background-color: black;
+}
+
+.navy{
+    color:white;
+    background-color: navy;
+}
+
+.royal{
+    color:white;
+    background-color: royalblue;
+}
+
 /*=========== Page de login ==============================*/
 
 .login{
