--- a/client/src/app/home/footer/footer.component.html
+++ b/client/src/app/home/footer/footer.component.html
@@ -51,7 +51,7 @@
   </div>
   <div class="container">
     <div class="copyright">
-      &copy; Copyright 2021 <strong class='green'>ADEPT Informatique</strong>. {{'footer.copyright'|translate}}
+      &copy; Copyright {{year}} <strong class='green'>ADEPT Informatique</strong>. {{'footer.copyright'|translate}}
     </div>
     <div class="credits">
       Ce site web est <a href='https://github.com/adept-informatique/adeptinfo.ca'>open-source</a>. Merci à <a
