--- a/client/src/app/home/nav/nav.component.html
+++ b/client/src/app/home/nav/nav.component.html
@@ -10,7 +10,7 @@
         <li><a href="#services">{{ "services" |translate}}</a></li>
         <li><a href="#team">{{"team" |translate}}</a></li>
         <li><a href="#contact">{{"contact" |translate}}</a></li>
-        <li><a href="http://adeptinfo.ca/lan">{{"lan_adept" |translate}}</a></li>
+        <li><a href="/lan">{{"lan_adept" |translate}}</a></li>
         <li (click)="toggleLanguage()">{{"lang" |translate}}</li>
       </ul>
     </nav>
