--- a/client/src/app/lan/lan.component.html
+++ b/client/src/app/lan/lan.component.html
@@ -1,1 +1,5 @@
-<!-- <router-outlet></router-outlet> -->
+<div style="display: grid; align-items: center;height: 100vh;">
+    <div style="display: flex;justify-content: center;">
+        <h1>LAN landing page here soon</h1>
+    </div>
+</div>
