--- a/client/src/app/admin/admin.component.scss
+++ b/client/src/app/admin/admin.component.scss
@@ -36,8 +36,11 @@
 }
 
 .sidebar_bubble:hover {
-  
-background: linear-gradient(90deg, rgba(32,31,30,1) 0%, rgba(10,134,12,0.33) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(32, 31, 30, 1) 0%,
+    rgba(10, 134, 12, 0.33) 100%
+  );
 }
 
 .sidebar_bubble_selected {
